--- a/terms.html
+++ b/terms.html
@@ -1,172 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Terms of Service – QingTsaiWip V2</title>
 
 <style>
+    :root {
+        --bg: #0d1117;
+        --card-bg: #161b22;
+        --text: #e6edf3;
+        --subtext: #8b949e;
+        --accent: #58a6ff;
+        --radius: 14px;
+    }
+
     body {
+        margin: 0;
+        padding: 40px 16px;
+        background-color: var(--bg);
+        color: var(--text);
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-        line-height: 1.7;
+        line-height: 1.75;
+        display: flex;
+        justify-content: center;
+    }
+
+    .container {
         max-width: 900px;
-        margin: 0 auto;
-        padding: 40px 20px;
-        background: #fafafa;
-        color: #222;
+        width: 100%;
+        background: var(--card-bg);
+        padding: 40px;
+        border-radius: var(--radius);
+        box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+        border: 1px solid #30363d;
+        animation: fadeIn 0.4s ease-out;
     }
-    h1, h2, h3 {
-        color: #0066cc;
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
     }
+
     h1 {
         font-size: 32px;
-        margin-bottom: 20px;
+        color: var(--accent);
+        margin-bottom: 10px;
+        font-weight: 700;
     }
+
     h2 {
         margin-top: 40px;
         font-size: 24px;
+        color: var(--accent);
+        border-left: 4px solid var(--accent);
+        padding-left: 10px;
     }
+
     h3 {
-        margin-top: 30px;
+        margin-top: 24px;
         font-size: 18px;
+        color: var(--text);
     }
+
     p, li {
-        margin: 12px 0;
+        color: var(--subtext);
+        margin: 10px 0;
     }
+
     ul {
-        margin-left: 20px;
+        margin-left: 22px;
     }
+
+    a {
+        color: var(--accent);
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
     code {
-        background: #eee;
-        padding: 2px 4px;
-        border-radius: 4px;
+        background: #21262d;
+        padding: 2px 5px;
+        border-radius: 6px;
+        color: #c9d1d9;
         font-size: 90%;
     }
+
+    .meta {
+        color: var(--subtext);
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+
 </style>
 </head>
 
 <body>
+<div class="container">
 
 <h1>Terms of Service – QingTsaiWip V2</h1>
-<p><em>Last Updated: November 12, 2025</em></p>
-<p><strong>Author: 你想想</strong></p>
-
-<p>
-Thank you for using <strong>QingTsaiWip V2</strong> (“the App”).  
-These Terms of Service (“the Terms”) constitute a legally binding agreement between you (“the User”) and the developer.  
-By accessing or using the App, you acknowledge that you have read, understood, and agreed to these Terms.
+<p class="meta"><strong>Author:</strong> 你想想<br>
+<strong>Last Updated:</strong> November 12, 2025
 </p>
 
-<!-- 1 -->
-<h2>1. Account Registration & Authentication</h2>
-<p>The App requires users to sign in before using any features.</p>
+<p>
+Thank you for using <strong>QingTsaiWip V2</strong>.  
+These Terms of Service (“Terms”) form a binding agreement between you (“User”) and the developer (“we”).  
+By using the App, you agree to be bound by these Terms.
+</p>
 
+<h2>1. Account Registration & Authentication</h2>
+<p>The App requires users to sign in before accessing any features.</p>
 <ul>
-    <li>Supports Sign in with Apple</li>
-    <li>Supports Email/Password registration and login</li>
-    <li>Upon login, a UserProfile is created or updated in Firestore (uid, email, displayName, createdAt, etc.)</li>
+    <li>Supported methods: Sign in with Apple, Email/Password login</li>
+    <li>A UserProfile document is created at <code>/users/{uid}</code></li>
+    <li>Stored information may include: uid, email, displayName, createdAt</li>
 </ul>
 
-<p>Users may not impersonate others or share their accounts with third parties.</p>
-
-<!-- 2 -->
 <h2>2. User-Generated Content (UGC)</h2>
 <p>
-The App allows users to create production-related records, which may include:  
-partNumber, workOrder, lotNumber, quantity, level, station, machinesString, remark, and other fields.
+Users may create production-related data including: partNumber, workOrder, lotNumber, quantity, level, machinesString, station, remark, etc.
 </p>
+<p>Users are responsible for the legality and correctness of their content.</p>
 
-<p>Users are fully responsible for the legality and accuracy of all submitted content.</p>
-
-<p>For global search functionality, the App mirrors certain data into <code>/globalRecords/</code>.</p>
-
-<!-- 3 -->
 <h2>3. Group Collaboration & Permissions</h2>
+<p>Users may create groups, invite others, and collaborate on shared data.</p>
 
-<p>Users may create groups and automatically become the group’s Owner.</p>
-
-<p>The Owner has full administrative permissions, including:</p>
+<h3>3.1 Group Owners</h3>
 <ul>
-    <li>Editing group information</li>
-    <li>Adding or removing members</li>
-    <li>Generating invitation codes</li>
-    <li>Transferring ownership</li>
-    <li>Permanently deleting the entire group (irreversible)</li>
+    <li>Manage group info</li>
+    <li>Add/remove members</li>
+    <li>Generate invitation codes</li>
+    <li>Transfer ownership</li>
+    <li>Permanently delete the entire group</li>
 </ul>
 
+<h3>3.2 Access Control</h3>
 <p>
-Members who join a group will have access to all group records according to the <code>visibleTo</code> access list.
+Group members are stored inside <code>visibleTo</code> and can access shared records under:
+</p>
+<code>/groups/{groupID}/records/</code>
+
+<h2>4. Subscriptions (StoreKit)</h2>
+<p>The App provides optional paid subscription using Apple’s StoreKit.</p>
+<ul>
+    <li>Subscription status saved as <code>isSubscribed</code></li>
+    <li>Expiration date stored as <code>subscriptionExpiryDate</code></li>
+    <li>Certain features require active subscription</li>
+</ul>
+
+<h2>5. Data Modification, Export & Deletion</h2>
+<p>Users may create, edit, export, or delete their own data.</p>
+<p>Supported export formats include JSON, CSV, and TXT.</p>
+<p>
+Deleting a group triggers recursive deletion using Cloud Functions — this action is permanent.
 </p>
 
-<!-- 4 -->
-<h2>4. Subscription (StoreKit)</h2>
-
-<p>The App provides paid subscription features using Apple’s native StoreKit framework.</p>
-
+<h2>6. User Responsibilities</h2>
+<p>Users may not engage in:</p>
 <ul>
-    <li>Subscription status is validated and stored in Firestore as <code>isSubscribed</code> and <code>subscriptionExpiryDate</code></li>
-    <li>Certain features require an active subscription</li>
-    <li>Purchasing and refund rules follow Apple’s App Store policies</li>
+    <li>Illegal or unauthorized activities</li>
+    <li>Sharing others’ data without permission</li>
+    <li>Reverse engineering or exploiting system vulnerabilities</li>
+    <li>Abuse of data import/export features</li>
 </ul>
 
-<!-- 5 -->
-<h2>5. Data Creation, Modification, Export & Deletion</h2>
-
-<p>Users may freely create, edit, export, or delete their own data records.</p>
-
-<p>Export formats include JSON, CSV, and TXT. Users are responsible for managing exported data.</p>
-
-<p>Imported data must follow the required structure. The developer is not responsible for issues caused by malformed imports.</p>
-
-<p>
-Deleting a group (by the Owner) triggers a recursive deletion of all associated data.  
-This action is permanent and cannot be undone.
-</p>
-
-<!-- 6 -->
-<h2>6. User Obligations</h2>
-
-<p>Users must not engage in any of the following:</p>
-
-<ul>
-    <li>Illegal usage of the App</li>
-    <li>Sharing or exporting data belonging to other users without permission</li>
-    <li>Abusing group or data creation features</li>
-    <li>Attempting hacking, reverse engineering, or unauthorized system access</li>
-</ul>
-
-<!-- 7 -->
 <h2>7. System Availability & Data Safety</h2>
+<p>
+We use Firebase for data storage and synchronization.  
+Although we strive for stability, we cannot guarantee zero downtime or zero data loss.
+</p>
 
-<p>The App uses Firebase for storage and synchronization.  
-While the developer aims for stable service, data loss or downtime cannot be fully guaranteed.</p>
-
-<p>Users are encouraged to regularly back up critical data.</p>
-
-<!-- 8 -->
 <h2>8. Disclaimer of Liability</h2>
-
-<p>The App acts as a data management tool.  
-The developer is not responsible for any inaccuracies, illegal content, or misuse of submitted data.</p>
-
 <p>
-The developer is not liable for data loss caused by device failure, user error, or cloud service outages.
+We are not responsible for issues caused by user-generated content, inaccurate data, external failures,  
+or misuse of exported data by third parties.
 </p>
 
-<!-- 9 -->
-<h2>9. Changes & Termination of Service</h2>
-
+<h2>9. Updates to the Terms</h2>
 <p>
-The developer reserves the right to update, modify, or terminate the service at any time.
+We may update these Terms at any time. Continued use of the App constitutes acceptance of the new Terms.
 </p>
 
-<p>
-If the User does not agree to updated Terms, they must stop using the App.
-</p>
-
-<!-- 10 -->
-<h2>10. Contact Information</h2>
+<h2>10. Contact</h2>
 <p>Email: <a href="mailto:cat.cafe1982@icloud.com">cat.cafe1982@icloud.com</a></p>
 
+</div>
 </body>
 </html>
